feat: add product filters endpoint
