# api/app/Http/Controllers/Catalog/ProductController.php
@@ -3,8 +3,10 @@
 namespace App\Http\Controllers\Catalog;
 
 use App\Http\Controllers\Controller;
-use App\Http\Resources\Catalog\ProductListResource;
+use App\Models\Brand;
 use App\Services\Catalog\ProductService;
+use App\Http\Resources\Catalog\ProductListResource;
+use App\Http\Resources\Catalog\FilterListResource;
 use Illuminate\Http\Request;
 use Illuminate\Http\Resources\Json\AnonymousResourceCollection;
 use OpenApi\Attributes as OA;
@@ -50,11 +52,49 @@ class ProductController extends Controller
             )
         ]
     )]
-    public function index(Request $request, String $brandSlug, ProductService $productService): AnonymousResourceCollection
+    public function index(Request $request, string $slug, ProductService $productService): AnonymousResourceCollection
     {
         $filters = $request->validate([]);
-        $products = $productService->filterProducts($filters, $brandSlug)->paginate(self::DEFAULT_PER_PAGE);
+        $brand = Brand::where('slug', $slug)->firstOrFail();
+        $products = $productService->filterProducts($filters, $brand)->paginate(self::DEFAULT_PER_PAGE);
         
         return ProductListResource::collection($products);
+    }
+
+    #[OA\Get(
+        path: '/api/v1/catalog/{brandSlug}/filters',
+        description: 'Получить все доступные фильтры по бренду',
+        parameters: [
+            new OA\Parameter(
+                name: "brandSlug",
+                description: "Слаг бренда",
+                in: "path",
+                required: true,
+                schema: new OA\Schema(
+                    type: "string",
+                    example: "apple"
+                )
+            ),
+        ],
+        tags: ['Catalog'],
+        responses: [
+            new OA\Response(
+                response: 200,
+                description: 'Список фильтров',
+                content: new OA\JsonContent(
+                    type: 'array',
+                    items: new OA\Items(ref: '#/components/schemas/FilterListResource')
+                )
+            )
+        ]
+    )]
+    public function getFilters(Request $request, string $slug, ProductService $productService): AnonymousResourceCollection
+    {
+        $filters = $request->validate([]);
+        
+        $brand = Brand::where('slug', $slug)->firstOrFail();
+        $filters = $productService->getFilters($brand);
+        
+        return FilterListResource::collection($filters);
     }
 }
